--- a/Recipes/carrotcake.html
+++ b/Recipes/carrotcake.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-wodth, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="icon" type="image/svg" href="../Fichier 4.svg" />
-  <link rel="stylesheet" href="../Accueil/style.css" />
+  <link rel="stylesheet" href="../style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/mjr1exj.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -26,10 +26,10 @@
     </div>
 </nav>
     <ul class="nav-links">
-      <li><a href="../Accueil/home.html">HOME</a></li>
-      <li><a href="../Accueil/recipes.html">RECIPES</a></li>
-      <li><a href="../Accueil/aboutme.html">ABOUT ME</a></li>
-      <li><a href="../Accueil/contact.html">CONTACT</a></li>
+      <li><a href="../index.html">HOME</a></li>
+      <li><a href="../recipes.html">RECIPES</a></li>
+      <li><a href="../aboutme.html">ABOUT ME</a></li>
+      <li><a href="../contact.html">CONTACT</a></li>
     </ul>
 <div class="container-fluid">
   <div class="container">
