--- a/recipes.html
+++ b/recipes.html
@@ -44,7 +44,7 @@
   <td><a href="Recipes/veganblueberrycheesecake.html"><img src="Images/BLUEBERRY-CHEESECAKE.gif" class="imageRecipes" alt="BlueberryCheesecake" height="336px" width="336px"/></a></td>
 </tr>
 <tr>
-  <td><a href="Recipes/chantalsnycheesecake.html"><img src="Images/chantalsNYCheesecake.jpeg" class="imageRecipes" alt="chantalsNYCheeseCake" height="336px" width=""/></a></td>
+  <td><a href="Recipes/chantalsnycheesecake.html"><img src="Images/chantalsNYCheesecake.jpeg" class="imageRecipes" alt="chantalsNYCheeseCake"></a></td>
   <td><a href="Recipes/fondantauchocolat.html"><img src="Images/Fondantauchocolat.jpg" class="imageRecipes" alt="fondantauchocolat" height="336px" width="600px"/></a></td>
 </tr>
 <tr>
