--- a/recipes.html
+++ b/recipes.html
@@ -48,7 +48,7 @@
   <td><a href="Recipes/fondantauchocolat.html"><img src="Images/Fondantauchocolat.jpg" class="imageRecipes" alt="fondantauchocolat" height="336px" width="600px"/></a></td>
 </tr>
 <tr>
-  <td><a href="Recipes/banhmipulledpork.html"><img src="Images/Banhmipulledpork.jpeg" class="imageRecipes" alt="Banhmipulledpork" height="336px" width="600px"/></a></td>
+  <td><a href="Recipes/banhmipulledpork.html"><img src="Images/Banhmipulledpork.jpg" class="imageRecipes" alt="Banhmipulledpork" height="336px" width="600px"/></a></td>
   <td><a href="Recipes/blueberrymuffin.html"><img src="Images/BlueberryMuffins.jpg" class="imageRecipes" alt="BlueberryMuffins" height="336px" width=""/></a></td>
 </tr>
 <tr>
