--- a/Recipes/chantalsnycheesecake.html
+++ b/Recipes/chantalsnycheesecake.html
@@ -58,7 +58,7 @@
     </div>
     <div class="col">
       <figure>
-        <img src="../Images/ChantalsNYCheesecake.jpeg" alt="ChantalsNYCheesecake"/>
+        <img src="../Images/NY-Cheesecake.jpg" alt="ChantalsNYCheesecake width="400px"/>
       </figure>
     </div>
   </div>
