--- a/Recipes/redvelvetcake.html
+++ b/Recipes/redvelvetcake.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-wodth, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="../stylecontact.css"/>
   <link rel="icon" type="image/svg" href="../Fichier 4.svg" />
-  <link rel="stylesheet" href="../style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&family=Satisfy&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/mjr1exj.css">
+  <script src="../app.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <script type="text/javascript" src="../app.js"></script>
-  <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+
   <title>
     Recipe Blog by Ruth Ann
   </title>
@@ -23,23 +26,23 @@
         <img src="../Fichier 2.png" width="750 px" height="160 px"/>
       </center>
     </div>
-</nav>
-    <ul class="nav-links">
+    <ul class="nav-link">
       <li><a href="../index.html">HOME</a></li>
       <li><a href="../recipes.html">RECIPES</a></li>
       <li><a href="../aboutme.html">ABOUT ME</a></li>
       <li><a href="../contact.html">CONTACT</a></li>
     </ul>
+  </nav>
 <div class="container-fluid">
   <div class="container" id="page">
   <div class="row">
 
     <div class="col" id="recette">
       <article>
-
-      <h2>Red Velvet Cake </h2>
+        <br><br>
+      <h1><strong>Red Velvet Cake</strong> </h1><br>
       Serves about 12 people.
-      <h4>Ingredients</h4>
+      <h4>Ingredients</h4><br>
       <ul>
         <li>2 cups plus 2 tablespoons (250 grams) cake flour</li>
         <li>1/2 teaspoon (2 grams) salt</li>
@@ -54,7 +57,7 @@
         <li>1 teaspoon (4 grams) white distilled vinegar</li>
         <li>1 teaspoon (4 grams) baking soda</li>
       </ul>
-
+      <br>
     <h4>Cream Cheese Frosting:</h4>
 
     <ul>
@@ -64,7 +67,8 @@
       <li>1 cup (115 grams) confectioners' (icing or powdered) sugar, sifted</li>
       <li>1 1/4 cups (300 ml) cold heavy whipping cream (cream with a 35-40% butterfat content)</li>
     </ul>
-    </article>
+  </article>
+  <br>
     <button onclick="printContent('recette')">Print Shopping List</button>
     <button onclick="printContent('page')"> Print this page </button>
     </div>
@@ -78,7 +82,9 @@
   <div class="row">
     <div class="col">
       <div class="directions" id="recette">
+        <br>
       <h3>Directions</h3>
+      <br>
       <h4>For the cake :</h4>
       <ol>
       <li>Preheat your oven to 350 degrees F (180 degrees C) and place the oven rack in the center of the oven. Butter two - 9 inch (23 cm) round cake pans and line the bottoms of the pans with parchment paper.
