--- a/Recipes/siopao.html
+++ b/Recipes/siopao.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-wodth, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="../stylecontact.css"/>
   <link rel="icon" type="image/svg" href="../Fichier 4.svg" />
-  <link rel="stylesheet" href="../style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&family=Satisfy&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/mjr1exj.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <script src="../app.js"></script>
-  <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   <title>
     Recipe Blog by Ruth Ann
   </title>
@@ -23,13 +25,14 @@
         <img src="../Fichier 2.png" width="750 px" height="160 px"/>
       </center>
     </div>
-</nav>
-    <ul class="nav-links">
+
+    <ul class="nav-link">
       <li><a href="../index.html">HOME</a></li>
       <li><a href="../recipes.html">RECIPES</a></li>
       <li><a href="../aboutme.html">ABOUT ME</a></li>
       <li><a href="../contact.html">CONTACT</a></li>
     </ul>
+</nav>
 <div class="container-fluid">
   <div class="container" id="page">
   <div class="row">
