--- a/recipes.html
+++ b/recipes.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-wodth, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="stylecontact.css"/>
   <link rel="icon" type="image/svg" href="../Fichier 4.svg" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/mjr1exj.css">
@@ -24,16 +24,15 @@
         <img src="Fichier 2.png" width="750 px" height="160 px"/>
       </center>
     </div>
-  </nav>
-    <ul class="nav-links">
+    <ul class="nav-link">
       <li><a href="index.html">HOME</a></li>
       <li><a href="recipes.html">RECIPES</a></li>
       <li><a href="aboutme.html">ABOUT ME</a></li>
       <li><a href="contact.html">CONTACT</a></li>
     </ul>
+</nav>
 
-
-    <center>
+<div class="container-fluid">
 <table>
 <tr>
   <td><a href="Recipes/redvelvetcake.html"><img src="Images/Redvelvetcake.jpg" class="imageRecipes" alt="RedVelvetCake" height="" width=""/></a></td>
@@ -44,11 +43,11 @@
   <td><a href="Recipes/veganblueberrycheesecake.html"><img src="Images/BLUEBERRY-CHEESECAKE.gif" class="imageRecipes" alt="BlueberryCheesecake" height="336px" width="336px"/></a></td>
 </tr>
 <tr>
-  <td><a href="Recipes/chantalsnycheesecake.html"><img src="Images/NYCheesecake.jpg" class="imageRecipes" alt="chantalsNYCheeseCake" width="600px" height="336px"></a></td>
+  <td><a href="Recipes/chantalsnycheesecake.html"><img src="Images/chantalsNYCheesecake.jpeg" class="imageRecipes" alt="chantalsNYCheeseCake" height="336px" width=""/></a></td>
   <td><a href="Recipes/fondantauchocolat.html"><img src="Images/Fondantauchocolat.jpg" class="imageRecipes" alt="fondantauchocolat" height="336px" width="600px"/></a></td>
 </tr>
 <tr>
-  <td><a href="Recipes/banhmipulledpork.html"><img src="Images/Banhmipulledpork.jpg" class="imageRecipes" alt="Banhmipulledpork" height="336px" width="600px"/></a></td>
+  <td><a href="Recipes/banhmipulledpork.html"><img src="Images/Banhmipulledpork.jpeg" class="imageRecipes" alt="Banhmipulledpork" height="336px" width="600px"/></a></td>
   <td><a href="Recipes/blueberrymuffin.html"><img src="Images/BlueberryMuffins.jpg" class="imageRecipes" alt="BlueberryMuffins" height="336px" width=""/></a></td>
 </tr>
 <tr>
@@ -57,7 +56,7 @@
 </tr>
 
 </table>
-</center>
+</div>
 </body>
 <footer>
 </footer>
