--- a/recipes.html
+++ b/recipes.html
@@ -39,16 +39,16 @@
   <td><a href="Recipes/carrotcake.html"><img src="Images/Carrotcake.jpg" class="imageRecipes" alt="CarrotCake" height="" width="600px"/></a></td>
 </tr>
 <tr>
-  <td><a href="Recipes/strawberrymirrorcake.html"><img src="Images/Chocolate_Mirror_Cake_main.jpg" class="imageRecipes" alt="MirrorCake" height="336px" width="600px"/></a></td>
+  <td><a href="Recipes/blueberrymuffin.html"><img src="Images/BlueberryMuffins.jpg" class="imageRecipes" alt="BlueberryMuffins" height="336px" width="600px"/></a></td>
   <td><a href="Recipes/veganblueberrycheesecake.html"><img src="Images/BLUEBERRY-CHEESECAKE.gif" class="imageRecipes" alt="BlueberryCheesecake" height="336px" width="336px"/></a></td>
 </tr>
 <tr>
-  <td><a href="Recipes/chantalsnycheesecake.html"><img src="Images/chantalsNYCheesecake.jpeg" class="imageRecipes" alt="chantalsNYCheeseCake" height="336px" width=""/></a></td>
+  <td><a href="Recipes/chantalsnycheesecake.html"><img src="Images/NYCheesecake.jpg" class="imageRecipes" alt="chantalsNYCheeseCake" height="336px" width=""/></a></td>
   <td><a href="Recipes/fondantauchocolat.html"><img src="Images/Fondantauchocolat.jpg" class="imageRecipes" alt="fondantauchocolat" height="336px" width="600px"/></a></td>
 </tr>
 <tr>
-  <td><a href="Recipes/banhmipulledpork.html"><img src="Images/Banhmipulledpork.jpeg" class="imageRecipes" alt="Banhmipulledpork" height="336px" width="600px"/></a></td>
-  <td><a href="Recipes/blueberrymuffin.html"><img src="Images/BlueberryMuffins.jpg" class="imageRecipes" alt="BlueberryMuffins" height="336px" width=""/></a></td>
+  <td><a href="Recipes/banhmipulledpork.html"><img src="Images/Banhmipulledpork.jpg" class="imageRecipes" alt="Banhmipulledpork" height="336px" width="600px"/></a></td>
+  <td><a href="Recipes/strawberrymirrorcake.html"><img src="Images/Chocolate_Mirror_Cake_main.jpg" class="imageRecipes" alt="MirrorCake" height="336px" width="600px"/></a></td>
 </tr>
 <tr>
   <td><a href="Recipes/siopao.html"><img src="Images/siopao.jpg" class="imageRecipes" alt="siopao" height="336px" width=""/></a></td>
