--- a/Recipes/banhmipulledpork.html
+++ b/Recipes/banhmipulledpork.html
@@ -79,7 +79,7 @@
     </div>
     <div class="col" id="recette">
       <figure>
-        <img src="../Images/Banhmipulledpork.jpeg" alt="Banh Mi Pulled Pork" width="600px"/>
+        <img src="../Images/Banhmipulledpork.jpg" alt="Banh Mi Pulled Pork" width="600px"/>
       </figure>
     </div>
   </div>
