--- a/Recipes/chantalsnycheesecake.html
+++ b/Recipes/chantalsnycheesecake.html
@@ -62,7 +62,7 @@
     </div>
     <div class="col">
       <figure>
-        <img src="../Images/ChantalsNYCheesecake.jpeg" alt="ChantalsNYCheesecake"/>
+        <img src="../Images/NYCheesecake.jpg" alt="ChantalsNYCheesecake"/>
       </figure>
     </div>
   </div>
